# snappy

./: Makefile  pyproject.toml
snappy/: cli.py  cmd.py  config.py  rotate.py  rsync.py  snappy.py  utils.py
snappy/assets/: snappy.ini
tests/: test_cmd.py  test_rotate.py  test_rsync.py  test_snappy.py
