[tool.poetry]
name = "snappy"
version = "0.1.3"
description = "A backup snapshot tool using rsync"
authors = ["Felipe Valladão <felipe.valladao@gmail.com>"]
license = "GPL-3-only"
readme = "README.md"
include = [
    "./snappy/assets/snappy.ini"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.poetry.scripts]
snappy = "snappy.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
